# empathy

./: .gitignore  AUTHORS  CONTRIBUTORS  ChangeLog  ChangeLog.old  HACKING  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac  empathy.doap  release.py
accounts/: Makefile.am  empathy-accounts-main.c
chat/: Makefile.am  empathy-chat-main.c  org.gnome.Empathy.Chat.service.in
contact-list/: Makefile.am  empathy-contact-list-main.c
data/: .gitignore  Makefile.am  Template.html  aim.profile  ekiga.profile  empathy-properties.desktop.in.in  empathy.desktop.in  empathy.desktop.in.in  empathy.schemas.in  fwd.profile  gadugadu.profile  groupwise.profile  gtalk.profile  icq.profile  irc.profile  jabber.profile  msn-haze.profile  msn.profile  qq.profile  salut.profile  sametime.profile  sipphone.profile  sofiasip.profile  yahoo.profile
data/16x16/: Makefile.am
data/22x22/: Makefile.am
data/24x24/: Makefile.am
data/32x32/: Makefile.am
data/48x48/: Makefile.am
data/icons/: Makefile.am  generate-png.sh
data/scalable/: Makefile.am  message-new.xcf  message.xcf  process-typing.xcf
docs/: .gitignore  Makefile.am  README
docs/libempathy/: .gitignore  Makefile.am  libempathy-docs.sgml  libempathy.types
docs/libempathy-gtk/: .gitignore  Makefile.am  libempathy-gtk-docs.sgml  libempathy-gtk.types
extensions/: .gitignore  Chandler.xml  Channel_Type_File_Transfer.xml  Filter.xml  Makefile.am  Stream_Engine.xml  Tube_Handler.xml  all.xml  extensions-cli.c  extensions.h  generic-types.xml  misc.xml
help/: .gitignore  Makefile.am  empathy.omf.in
launcher/: Makefile.am  empathy-launcher.c
libempathy/: .gitignore  Makefile.am  empathy-account-manager.c  empathy-account-manager.h  empathy-account-priv.h  empathy-account.c  empathy-account.h  empathy-avatar.c  empathy-avatar.h  empathy-call-factory.c  empathy-call-factory.h  empathy-call-handler.c  empathy-call-handler.h  empathy-chandler.c  empathy-chandler.h  empathy-chandler.xml  empathy-chatroom-manager.c  empathy-chatroom-manager.dtd  empathy-chatroom-manager.h  empathy-chatroom.c  empathy-chatroom.h  empathy-conf.c  empathy-contact-factory.c  empathy-contact-factory.h  empathy-contact-groups.c  empathy-contact-groups.h  empathy-contact-list.c  empathy-contact-list.h  empathy-contact-manager.c  empathy-contact-manager.h  empathy-contact-monitor.c  empathy-contact-monitor.h  empathy-contact.c  empathy-contact.h  empathy-debug.c  empathy-debug.h  empathy-debugger.c  empathy-debugger.h  empathy-dispatch-operation.c  empathy-dispatch-operation.h  (+97 more)
libempathy-gtk/: .gitignore  Makefile.am  empathy-about-dialog.c  empathy-about-dialog.h  empathy-account-chooser.c  empathy-account-chooser.h  empathy-account-widget-aim.glade  empathy-account-widget-aim.ui  empathy-account-widget-generic.c  empathy-account-widget-generic.glade  empathy-account-widget-generic.h  empathy-account-widget-generic.ui  empathy-account-widget-groupwise.glade  empathy-account-widget-groupwise.ui  empathy-account-widget-icq.glade  empathy-account-widget-icq.ui  empathy-account-widget-irc.c  empathy-account-widget-irc.glade  empathy-account-widget-irc.h  empathy-account-widget-irc.ui  empathy-account-widget-jabber.c  empathy-account-widget-jabber.glade  empathy-account-widget-jabber.h  empathy-account-widget-jabber.ui  empathy-account-widget-msn.c  empathy-account-widget-msn.glade  empathy-account-widget-msn.h  empathy-account-widget-msn.ui  empathy-account-widget-salut.c  empathy-account-widget-salut.glade  empathy-account-widget-salut.h  empathy-account-widget-salut.ui  empathy-account-widget-sip.c  empathy-account-widget-sip.glade  empathy-account-widget-sip.h  empathy-account-widget-sip.ui  empathy-account-widget-yahoo.glade  empathy-account-widget-yahoo.ui  empathy-account-widget.c  empathy-account-widget.h  (+211 more)
megaphone/: .gitignore
megaphone/src/: Makefile.am  megaphone-applet.c  megaphone-applet.h
nothere/: .gitignore
nothere/data/: GNOME_NotHere_Applet.server.in.in  Makefile.am
nothere/src/: Makefile.am  nothere-applet.c  nothere-applet.h
pixmaps/: Makefile.am
po/: .gitignore  ChangeLog  LINGUAS  (+66 more)
python/pyempathy/: Makefile.am  pyempathy.defs  pyempathy.override  pyempathymodule.c
python/pyempathygtk/: Makefile.am  pyempathygtk.defs  pyempathygtk.override  pyempathygtkmodule.c
src/: .gitignore  Makefile.am  bacon-message-connection.c  empathy-about-dialog.c  empathy-about-dialog.h  empathy-accounts-dialog.c  empathy-accounts-dialog.glade  empathy-accounts-dialog.h  empathy-accounts-dialog.ui  empathy-accounts-main.c  empathy-accounts.1  empathy-accounts.c  empathy-call-chandler.c  empathy-call-window-fullscreen.c  empathy-call-window-fullscreen.h  empathy-call-window-fullscreen.ui  empathy-call-window.c  empathy-call-window.glade  empathy-call-window.h  empathy-call-window.ui  empathy-call.chandler  empathy-chat-chandler.c  empathy-chat-main.c  empathy-chat-window.c  empathy-chat-window.glade  empathy-chat-window.h  empathy-chat-window.ui  empathy-chat.chandler  empathy-chatrooms-window.c  empathy-chatrooms-window.glade  empathy-chatrooms-window.h  empathy-chatrooms-window.ui  empathy-contact-list-main.c  empathy-debug-dialog.c  empathy-debug-dialog.h  empathy-event-manager.c  empathy-event-manager.h  empathy-filter-plugin.c  empathy-filter.c  empathy-filter.h  (+51 more)
tests/: .gitignore  Makefile.am  check-empathy-chatroom-manager.c  check-empathy-chatroom.c  check-empathy-helpers.c  check-empathy-helpers.h  check-empathy-irc-chatroom-manager.c  check-empathy-irc-network-manager.c  check-empathy-irc-network.c  check-empathy-irc-server.c  check-empathy-utils.c  check-helpers.c  check-helpers.h  check-irc-helper.c  check-irc-helper.h  check-libempathy.h  check-main.c  contact-manager.c  contact-run-until-ready-2.c  contact-run-until-ready.c  empetit.c  test-empathy-presence-chooser.c  test-empathy-profile-chooser.c  test-empathy-status-preset-dialog.c  test.manager  test.profile
tests/xml/: .gitignore  Makefile.am  chatrooms-sample.xml  default-irc-networks-sample.xml  user-irc-networks-sample.xml
(+91 files in other folders)
