INCLUDES =	                                 	\
	-I$(top_srcdir)                          	\
	$(EMPATHY_CFLAGS)				\
	$(WARN_CFLAGS)

bin_PROGRAMS = empathy-launcher
empathy_launcher_SOURCES = empathy-launcher.c
empathy_launcher_LDADD =							\
	$(top_builddir)/libempathy/libempathy.la				\
	$(EMPATHY_LIBS)


